--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.4",
     "@types/cors": "2.x",
     "cors": "2.x",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
